# busywork

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
busywork/: __init__.py  __main__.py  ci.py  install.py  pyproject.py  session.py  utils.py
busywork/backends/: __init__.py  backend.py  busywork.py  pip.py
groups/: __main__.py  install.py  pyproject.py  utils.py
